# rumos

./: .gitignore  Cargo.toml  README.md
src/: args.rs  enums.rs  main.rs
src/funcs/: mod.rs
src/setup/: mod.rs
tests/: cli.rs
