[package]
name = "rumos"
version = "1.0.0"
authors = ["Octagony <moctagony@gmail.com>"]
edition = "2021"
description = "CLI utility for controlling screen brightness"
keywords = ["system","cli","brightness"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brightness = "0.5.0"
clap = { version = "4.3.10", features = ["derive"] }
futures = "0.3.28"

[profile.release]
opt-level = 3
debug = false
lto = true
incremental = true
