[package]
name = "rumos"
version = "0.0.5"
authors = ["Octagony <moctagony@gmail.com>"]
edition = "2021"
description = "CLI utility for controlling screen brightness"
keywords = ["system","cli","brightness"]
repository = "https://github.com/octagony/rumos"
license = "MIT"
readme = "README.md"


[dependencies]
assert_cmd = "2.0.12"
brightness = "0.6.0"
clap = { version = "4.3.10", features = ["derive"] }
colored = "2.0.4"
futures = "0.3.28"
predicates = "3.0.3"

[profile.release]
opt-level = 3
debug = false
lto = true
incremental = true
